<resources>
    <string name="app_name">TheMovieBooking</string>
    <string name="lbl_welcome">Welcome!</string>
    <string name="lbl_hello_welcome_to_galaxy_app">Hello! Welcome to Galaxy App</string>
    <string name="lbl_get_started_btn">Get Started</string>
    <string name="lbl_welcome_back_login_to_continue">Welcome back, login to continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_sign_in_with_facebook">Sign in with facebook</string>
    <string name="lbl_sign_in_with_google">Sign in with google</string>
    <string name="lbl_continue">Continue</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_phone_number">Phone Number</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_now_showing">Now Showing</string>
    <string name="lbl_coming_soon">Coming Soon</string>
    <string name="label_imdb">IMDB</string>
    <string name="lbl_plot_summary">Plot Summary</string>
    <string name="lbl_cast">Cast</string>
    <string name="lbl_get_your_ticket">Get Your Ticket</string>
    <string name="lbl_next">Next</string>
    <string name="hint_enter_promo_code"><i>Enter promo code</i></string>
    <string name="lbl_login_tab">Login</string>
    <string name="lbl_register_tab">Sign In</string>
    <string name="lbl_don_t_have_any_promo_code">Don\'t have any promo code?</string>
    <string name="lbl_get_it_now">Get it Now</string>
    <string name="lbl_payment_method">Payment Method</string>
    <string name="lbl_three_dots">...</string>
    <string name="lbl_card_holder">CARD HOLDER</string>
    <string name="lbl_expires">EXPIRES</string>
    <string name="lbl_add_new_card_button">Add new card</string>
    <string name="lbl_payment_amount">Payment amount</string>
    <string name="lbl_card_holder_label">Card Holder</string>
    <string name="lbl_expiration_date">Expiration Date</string>
    <string name="lbl_cvc">CVC</string>
    <string name="lbl_awesome">Awesome!</string>
    <string name="lbl_this_is_your_ticket">This is your ticket.</string>
    <string name="lbl_booking_no">Booking no</string>
    <string name="lbl_showtime_date">Showtime-Date</string>
    <string name="lbl_theater">Theater</string>
    <string name="lbl_screen">Screen</string>
    <string name="lbl_row">Row</string>
    <string name="lbl_seat">Seat</string>
    <string name="lbl_price">Price</string>
    <string name="tv_edit">Edit</string>
    <string name="lbl_select_a_language">Select a Language</string>
    <string name="lbl_promotion_code">Promotion Code</string>
    <string name="lbl_terms_of_service">Terms of Service</string>
    <string name="lbl_help">Help</string>
    <string name="lbl_rate_us">Rate Us</string>
    <string name="lbl_log_out">Log Out</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="lbl_available">Available</string>
    <string name="lbl_reserved">Reserved</string>
    <string name="lbl_your_selection">Your Selection</string>
    <string name="lbl_tickets">Tickets</string>
    <string name="lbl_seats">Seats</string>
</resources>