<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.RegisterFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/lbl_email"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/text_regular_2x" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvEmail"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_medium_2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/etEmail"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/lbl_password"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/text_regular_2x" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvPassword"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:inputType="textPassword" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/etPassword"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/lbl_name"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/text_regular_2x" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvName"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_medium_2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/etName"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/lbl_phone_number"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/text_regular_2x" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvPhone"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_medium_2" />

            <include
                android:id="@+id/vpRegisterButton"
                layout="@layout/view_pod_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etPhone"
                android:layout_marginTop="@dimen/margin_xxlarge"
                android:layout_marginBottom="@dimen/margin_medium_2" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>