<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PaymentCardActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGotoVoucher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:layout_marginBottom="@dimen/margin_medium_2"
        android:background="@drawable/background_get_started_button"
        android:backgroundTint="@color/colorPrimary"
        android:paddingTop="@dimen/margin_medium_2"
        android:paddingBottom="@dimen/margin_medium_2"
        android:text="@string/lbl_continue"
        android:textAllCaps="false"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/text_regular_2x" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/margin_xlarge"
            android:layout_height="@dimen/margin_xlarge"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:layout_marginBottom="@dimen/margin_medium_2"
            android:elevation="@dimen/margin_medium"
            android:src="@drawable/ic_baseline_chevron_left_white_24dp"
            app:tint="@color/black" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPaymentAmountLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnBack"
            android:text="@string/lbl_payment_amount"
            android:textColor="@color/colorSecondaryText"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginBottom="@dimen/margin_medium_2"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPaymentAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvPaymentAmountLabel"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginBottom="@dimen/margin_medium_2"
            android:text="$ 926.21"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/text_regular_3x" />


        <com.jackandphantom.carouselrecyclerview.CarouselRecyclerview
            android:id="@+id/rvCarouselCreditCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvPaymentAmount" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddNewCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rvCarouselCreditCard"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:layout_marginStart="@dimen/margin_medium_2"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:icon="@drawable/ic_baseline_add_circle_white_24dp"
            app:iconTint="@color/colorAddGreen"
            android:text="@string/lbl_add_new_card_button"
            android:textColor="@color/colorAddGreen"/>
    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>