<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NewPaymentCardActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGoBackToCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:layout_marginBottom="@dimen/margin_medium_2"
        android:background="@drawable/background_get_started_button"
        android:backgroundTint="@color/colorPrimary"
        android:paddingTop="@dimen/margin_medium_2"
        android:paddingBottom="@dimen/margin_medium_2"
        android:text="@string/lbl_continue"
        android:textAllCaps="false"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/text_regular_2x" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/margin_xlarge"
            android:layout_height="@dimen/margin_xlarge"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:layout_marginBottom="@dimen/margin_medium_2"
            android:elevation="@dimen/margin_medium"
            android:src="@drawable/ic_baseline_chevron_left_white_24dp"
            app:tint="@color/black" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCardNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnBack"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:layout_marginBottom="@dimen/margin_medium_2"
            android:text="Card Number"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/text_regular_2x" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvCardNumber"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:layout_marginBottom="@dimen/margin_medium_2" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCardHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etCardNumber"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginBottom="@dimen/margin_medium_2"
            android:text="@string/lbl_card_holder_label"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/text_regular_2x" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etCardHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvCardHolder"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:layout_marginBottom="@dimen/margin_medium_2" />

        <LinearLayout
            android:id="@+id/llExpirationLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/etCardHolder"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvExpirationDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_weight="1"
                android:text="@string/lbl_expiration_date"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/text_regular_2x" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCvc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lbl_cvc"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/text_regular_2x" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llExpiration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/etCardHolder"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etExpirationDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:layout_weight="1"
                android:layout_marginBottom="@dimen/margin_medium_2" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etCvc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:layout_marginBottom="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:layout_weight="1"/>


        </LinearLayout>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>